[package]
name = "bhasha"
version = "0.1.0"
authors = ["Jonathan Landicheff <jlandicheff@kilig.io>"]
edition = "2018"

[lib]
name = "bhasha"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
indexmap = "1.4.0"
