[package]
name = "bhasha"
version = "0.1.0"
authors = ["Jonathan Landicheff <jlandicheff@kilig.io>"]
edition = "2018"

[lib]
name = "bhasha"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
rand_seeder = "0.2.2"
